Game gones well

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,9 @@
         <activity android:name=".Config" />
         <activity android:name=".Results" />
         <activity android:name=".Log" />
-        <activity android:name=".Frag_name" />
-        <activity android:name=".DisplayBBDD"></activity>
+        <activity android:name=".Frag_game" />
+        <activity android:name=".DisplayBBDD" />
+        <activity android:name=".MySharedPreferences"></activity>
     </application>
 
 </manifest>
